tests/errors/tcl_error_beta/tcl_error_sourced.tcl
proc c args {
    error "Error!"

}

set test_variable 0

if {$test_variable == 0} {
    #puts "test output"
}
test fehler
